--- a/pong.html
+++ b/pong.html
@@ -43,8 +43,9 @@
             <li>CREATED by:<br>ZUU</li>
             <li>GITHUB USER NAME:<br> MUnair</li>
             <li>LEVEL 2:<br> TEST FOR JAVA</li>
-        <img src="img/ping.jpeg" width="300px" height="300px">
         </ol>
+        <img src="img/ping-pong1.jpg" width="300px" height="300px">
+    
 </div>
 </body>
 </html>
