--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <li>Numbers divisible by 5 become "pong"</li>
             <li>Numbers divisible by both 3 and 5 become "pingpong"</li>
           </ol>
-          <form class="form-inline">
+          <form id="forminput" class="form-inline">
               <p>LET START THE GAME!!</p>
             <label>Enter your number here: </label>
             <input id="input" class="form-control" type="text">
